fix: Remove overflow-x
검색 시 스크롤 나오는 문제 해결

--- a/src/styles/pages/search.scss
+++ b/src/styles/pages/search.scss
@@ -2,7 +2,6 @@
   margin: 120px auto 10px auto;
   width: 800px;
   height: 700px;
-  overflow-x: hidden;
   position: relative;
   .no-item{
     position: absolute;
